@@ -7,7 +7,7 @@ Standards-Version: 4.0.1
 Vcs-Svn: svn://svn.debian.org/d-i/trunk/manual
 Vcs-Browser: http://anonscm.debian.org/viewvc/d-i/trunk/manual/
 Build-Depends: debhelper (>= 6)
-Build-Depends-Indep: docbook, docbook-xml, docbook-xsl, xsltproc, gawk, libhtml-parser-perl, w3m, poxml, jadetex, openjade, dblatex, docbook-dsssl, ghostscript, texlive-xetex, lmodern, texlive-lang-cyrillic, texlive-lang-czechslovak, texlive-lang-european, texlive-lang-french, texlive-lang-german, texlive-lang-greek, texlive-lang-italian, texlive-lang-other, texlive-lang-portuguese, texlive-lang-spanish, ko.tex-base, cm-super, fonts-wqy-microhei, fonts-vlgothic, fonts-freefont-ttf
+Build-Depends-Indep: docbook, docbook-xml, docbook-xsl, xsltproc, gawk, libhtml-parser-perl, w3m, poxml, dblatex, docbook-dsssl, ghostscript, texlive-xetex, lmodern, texlive-lang-cyrillic, texlive-lang-czechslovak, texlive-lang-european, texlive-lang-french, texlive-lang-german, texlive-lang-greek, texlive-lang-italian, texlive-lang-other, texlive-lang-portuguese, texlive-lang-spanish, fonts-wqy-microhei, fonts-vlgothic, fonts-freefont-ttf
 # This comment can also be used to generate a Build-Depends-Indep line, by
 # running the debian/genbuilddeps program. So put each build dep on its own
 # line, prefixed by " - " and to comment out a build dep, start the line
@@ -25,13 +25,10 @@ Build-Depends-Indep: docbook, docbook-xml, docbook-xsl, xsltproc, gawk, libhtml-
 #		Used to generate plain text manual from html.
 #	- poxml
 #		Translations of the manual are done in po files via poxml.
-#	- jadetex
-#	- openjade
-#		ps variants are build using jade.
 #	- dblatex
 #		pdf variants are build using dblatex.
 #	- docbook-dsssl
-#		Used for producing pdf and ps files.
+#		Used for producing pdf files.
 #	- ghostscript
 #		For pdfs.
 #	- texlive-xetex
@@ -55,10 +52,6 @@ Build-Depends-Indep: docbook, docbook-xml, docbook-xsl, xsltproc, gawk, libhtml-
 ##	- texlive-lang-vietnamese
 #		All texlive-lang-* packages provide hyphenation and other
 #		language-specific support.
-#	- ko.tex-base
-#		Font for Korean ps.
-#	- cm-super
-#		Font for Russian ps.
 #	- fonts-wqy-microhei
 #		Font for Korean and Chinese pdf.
 #	- fonts-vlgothic
