@@ -16,6 +16,8 @@ installation-guide (2017XXXX) UNRELEASED; urgency=medium
     Closes: #692314
   * Icedove was de-branded to Thunderbird (see #816679): related changings.
   * Fix typo in supported ARM devices section. Closes: #869932
+  * Remove support for 'ps' output format, therefore remove depends openjade,
+    jadetex, ko.tex-base and cm-super as well. Closes: #871751
 
   [ Martin Michlmayr ]
   * Remove QNAP TS-109, TS-209 and TS-409 as they are no longer supported.
